Fixing z-index nav issue

--- a/css/component.css
+++ b/css/component.css
@@ -81,7 +81,7 @@
 	position: absolute;
 	width: 100%;
 	bottom: 30px;
-	z-index: 2;
+	z-index: 201;
 	text-align: center;
 	left: 0;
 	-webkit-transition: opacity 0.3s;
